Bug 1773121 - If an element is relatively positioned, report overflow area that is a union of relative and static position. r=dholbert

With this, a relatively positioned element e.g. being offset to the left
should not decrease the scrollport size. For this, overflow area calculation
for relatively positioned elements must behave like
`nsIFrame::GetActualAndNormalOverflowAreasRelativeToParent`. We aren't
using the function directly since it's meant to be called post-reflow, and
we want to report it correctly during reflow in the first place.

Differential Revision: https://phabricator.services.mozilla.com/D149156