layout/generic/nsBlockReflowContext.cpp
@@ -431,6 +431,12 @@ bool nsBlockReflowContext::PlaceBlock(const ReflowInput& aReflowInput,
       nsIFrame::ReflowChildFlags::ApplyRelativePositioning);
 
   aOverflowAreas = mMetrics.mOverflowAreas + mFrame->GetPosition();
+  if (MOZ_UNLIKELY(mFrame->IsRelativelyOrStickyPositioned())) {
+    aOverflowAreas.ScrollableOverflow() =
+        aOverflowAreas.ScrollableOverflow().Union(
+            mMetrics.mOverflowAreas.ScrollableOverflow() +
+            mFrame->GetNormalPosition());
+  }
 
   return true;
 }
